# InsightAI

./: .dockerignore  .gitignore  .tool-versions  Dockerfile  LICENSE  README.md  __init__.py  config.json  data.dvc  logging_config.json  main.py  pyproject.toml  rag_config.json  requirements.txt  setup.py  startup.sh
.dvc/: config
.github/workflows/: master_insightai-app.yml  master_insightai.yml
base/: base_dataloader.py  base_model.py  base_rag.py  base_trainer.py
chroma_langchain_db/540e58fd-b833-4e0a-89b6-22e902cbaa22/: index_metadata.pickle
data/: README.md  annotation.xlsx  category_image_count.csv  data.py  image_labels.csv  test.ipynb
dataloader/: base_dataloader.py  custom_dataset.py  data_transform.py  dataloader.py
logger/: logger.py  logging_config.json
model/: loss.py  model.py
notebooks/: chroma_create_db.ipynb
rag/: build_rag.py
src/: __init__.py  model.py  setup_config.py  train_model.py
src/app/: gradio_app.py
src/backend/: README.md
src/base/: base_dataloader.py  base_rag.py  base_trainer.py
src/dataloader/: __init__.py  callbacks.py  custom_dataset.py  data_module.py  dataloader.py
src/frontend/: README.md
src/insightai/data/: README.md
src/model/: model.py
src/notebooks/: chroma_create_db.ipynb
src/rag/: build_rag.py  rag.py
src/scripts/: train_model.py
src/trainer/: train.py
src/training/: README.md  config.py
src/utils/: __init__.py  logger.py  utils.py
tests/: main.ipynb
trainer/: train.py
utils/: utils.py
vector_store_250chunk/: chroma.sqlite3
vector_store_250chunk_openai/0c88d37a-b2da-44c0-bfbe-e07b1c2ff29b/: index_metadata.pickle
