[tool.poetry]
name = "insightai"
version = "0.1.0"
description = ""
authors = ["Sugam Sharma <sugams342@gmail.com>, Apurva Patil <apurvampatil17@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
albumentations = "^1.4.14"
scikit-learn = "^1.5.1"
tqdm = "^4.66.5"
dvc = {extras = ["azure"], version = "^3.55.2"}
langchain-chroma = ">=0.1.2"
gradio = "^5.1.0"
lightning = "^2.4.0"
wandb = "^0.18.5"
loguru = "^0.7.2"
torch = {version = "^2.5.1+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.20.1+cpu", source = "pytorch_cpu"}

[tool.poetry.group.rag.dependencies]
ollama = "^0.3.2"
chromadb = "^0.5.5"
pypdf = "^4.3.1"
langchain-community = "^0.2.15"
langchain-ollama = "^0.1.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
