[tool.poetry]
name = "insightai"
version = "0.1.0"
description = ""
authors = ["Sugam Sharma <sugams342@gmail.com>, Apurva Patil <apurvampatil17@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.1"
tqdm = "^4.66.5"
langchain-chroma = ">=0.1.2"
gradio = "^5.1.0"
lightning = "^2.4.0"
loguru = "^0.7.2"
torch = {version = "^2.5.1+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.20.1+cpu", source = "pytorch_cpu"}
fastapi = "^0.115.4"
gunicorn = "^23.0.0"

[tool.poetry.group.rag.dependencies]
chromadb = "^0.5.5"
langchain-openai = "^0.2.6"
langchain-ollama = "^0.2.0"
langchain-community = "^0.3.5"

[tool.poetry.group.dev.dependencies]
pypdf = "^4.3.1"
wandb = "^0.18.5"
ipykernel = "^6.29.5"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
